--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "name": "elmish-polymer",
     "flat": true,
     "scripts": {
-        "build": "dotnet fable yarn-run webpack-p",
-        "webpack-p": "webpack -p",
-        "start": "dotnet fable yarn-run webpack-dev-server"
+        "build": "webpack -p",
+        "start": "webpack-dev-server"
     },
     "version": "1.0.0",
     "main": "public/index.html",
@@ -12,84 +11,80 @@
     "dependencies": {
         "@polymer/paper-button": "^3.0.0-pre.6"
     },
-    "resolutions": {
-        "acorn": "5.3.0",
-        "ajv": "5.5.2",
-        "ansi-regex": "3.0.0",
-        "anymatch": "2.0.0",
-        "arr-diff": "4.0.0",
-        "array-flatten": "2.1.1",
-        "array-unique": "0.3.2",
-        "assert-plus": "1.0.0",
-        "async": "2.6.0",
-        "braces": "2.3.0",
-        "camelcase": "4.1.0",
-        "chokidar": "2.0.0",
-        "cliui": "3.2.0",
-        "core-js": "2.5.3",
-        "debug": "3.1.0",
-        "define-property": "1.0.0",
-        "depd": "1.1.2",
-        "expand-brackets": "2.1.4",
-        "extend-shallow": "3.0.2",
-        "extglob": "2.0.4",
-        "extsprintf": "1.4.0",
-        "faye-websocket": "0.11.1",
-        "fill-range": "4.0.0",
-        "find-up": "2.1.0",
-        "glob-parent": "3.1.0",
-        "has-value": "1.0.0",
-        "has-values": "1.0.0",
-        "hash-base": "3.0.4",
-        "inherits": "2.0.3",
-        "is-accessor-descriptor": "1.0.0",
-        "is-data-descriptor": "1.0.0",
-        "is-descriptor": "1.0.2",
-        "is-extendable": "1.0.1",
-        "is-extglob": "2.1.1",
-        "is-fullwidth-code-point": "2.0.0",
-        "is-glob": "4.0.0",
-        "is-number": "3.0.0",
-        "isobject": "3.0.1",
-        "jsesc": "1.3.0",
-        "kind-of": "4.0.0",
-        "lazy-cache": "2.0.2",
-        "load-json-file": "2.0.0",
-        "micromatch": "3.1.5",
-        "mime-db": "1.32.0",
-        "mime": "1.6.0",
-        "minimist": "1.2.0",
-        "os-locale": "2.1.0",
-        "path-exists": "3.0.0",
-        "path-type": "2.0.0",
-        "pify": "3.0.0",
-        "punycode": "1.4.1",
-        "qs": "6.5.1",
-        "querystringify": "1.0.0",
-        "read-pkg-up": "2.0.0",
-        "read-pkg": "2.0.0",
-        "set-value": "2.0.0",
-        "setprototypeof": "1.1.0",
-        "source-map": "0.6.1",
-        "statuses": "1.4.0",
-        "string-width": "2.1.1",
-        "strip-ansi": "4.0.0",
-        "strip-bom": "3.0.0",
-        "supports-color": "4.5.0",
-        "url-parse": "1.2.0",
-        "which-module": "2.0.0",
-        "yargs-parser": "7.0.0",
-        "yargs": "8.0.2"
-    },
     "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-es2015": "^6.24.1",
-        "fable-loader": "^1.1.6",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
         "webpack": "^3.10.0",
         "webpack-dev-server": "^2.11.1"
+    },
+    "resolutions": {
+        "debug": "3.1.0",
+        "source-map": "0.6.1",
+        "strip-ansi": "4.0.0",
+        "supports-color": "5.1.0",
+        "ansi-regex": "3.0.0",
+        "jsesc": "1.3.0",
+        "minimist": "1.2.0",
+        "pify": "3.0.0",
+        "find-up": "2.1.0",
+        "path-exists": "3.0.0",
+        "acorn": "5.3.0",
+        "ajv": "5.5.2",
+        "async": "2.6.0",
+        "yargs": "8.0.2",
+        "inherits": "2.0.3",
+        "punycode": "1.4.1",
+        "hash-base": "3.0.4",
+        "camelcase": "4.1.0",
+        "cliui": "3.2.0",
+        "lazy-cache": "2.0.2",
+        "kind-of": "6.0.2",
+        "chokidar": "2.0.0",
+        "anymatch": "2.0.0",
+        "glob-parent": "3.1.0",
+        "is-glob": "4.0.0",
+        "micromatch": "3.1.5",
+        "arr-diff": "4.0.0",
+        "array-unique": "0.3.2",
+        "braces": "2.3.0",
+        "expand-brackets": "2.1.4",
+        "extglob": "2.0.4",
+        "is-extglob": "2.1.1",
+        "fill-range": "4.0.0",
+        "is-number": "3.0.0",
+        "isobject": "3.0.1",
+        "is-extendable": "1.0.1",
+        "string-width": "2.1.1",
+        "is-fullwidth-code-point": "2.0.0",
+        "qs": "6.5.1",
+        "assert-plus": "1.0.0",
+        "extsprintf": "1.4.0",
+        "mime-db": "1.32.0",
+        "os-locale": "2.1.0",
+        "read-pkg-up": "2.0.0",
+        "which-module": "2.0.0",
+        "yargs-parser": "7.0.0",
+        "read-pkg": "2.0.0",
+        "load-json-file": "2.0.0",
+        "path-type": "2.0.0",
+        "strip-bom": "3.0.0",
+        "array-flatten": "2.1.1",
+        "define-property": "1.0.0",
+        "extend-shallow": "3.0.2",
+        "is-descriptor": "1.0.2",
+        "is-accessor-descriptor": "1.0.0",
+        "is-data-descriptor": "1.0.0",
+        "has-value": "1.0.0",
+        "set-value": "2.0.0",
+        "has-values": "1.0.0",
+        "depd": "1.1.2",
+        "setprototypeof": "1.1.0",
+        "statuses": "1.4.0",
+        "mime": "1.6.0",
+        "faye-websocket": "0.11.1",
+        "url-parse": "1.2.0",
+        "querystringify": "1.0.0"
     }
 }
